# papers-mcp

./: pyproject.toml
.claude/: current-session-id
.claude/rules/: codebase-map.md
data/: papers.db-shm  papers.db-wal
src/research_mcp/: cag.py  db.py  deep_research.py  discovery.py  extraction.py  middleware.py  openalex.py  papers.py  rcs.py  server.py
tests/: test_db.py  test_openalex.py  test_server.py
