[project]
name = "research-mcp"
version = "0.2.0"
description = "Research paper discovery, full-text extraction, evidence synthesis, and RAG via MCP"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0,<4.0",
    "httpx>=0.27",
    "tenacity>=9.0",
    "pymupdf>=1.25",
    "google-genai>=1.0",
    "exa-py>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.22"]

[project.scripts]
research-mcp = "research_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/research_mcp"]

[tool.pyright]
typeCheckingMode = "basic"
exclude = ["data/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
